lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp.clang-tidy.loop-label.out.log
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:2565:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:2565:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:2579:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:2579:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:2593:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:2593:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:4549:7: warning: Added loop label VITIS_LOOP_1248_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1248_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:4549:7: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6533:42: error: Invalid Directive: for current device, ram_t2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=A type=ram_t2p impl=bram
                                         ^
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6534:44: error: Invalid Directive: for current device, ram_t2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=tmp type=ram_t2p impl=bram
                                           ^
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6535:50: error: Invalid Directive: for current device, ram_1p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=denom_row type=ram_1p impl=bram
                                                 ^
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6551:2: warning: Added loop label VITIS_LOOP_39_1:   [xilinx-label-all-loops]
 for (int k = 0; k < UF_NORM; k++) {
 ^~~
 VITIS_LOOP_39_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6551:2: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6552:9: warning: Added loop label VITIS_LOOP_40_2:   [xilinx-label-all-loops]
        for (int b = 0; b < BLKS_N; b++) {
        ^~~
        VITIS_LOOP_40_2: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6552:9: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6559:5: warning: Added loop label VITIS_LOOP_47_3:   [xilinx-label-all-loops]
    for (int i = 0; i < 256; i++) {
    ^~~
    VITIS_LOOP_47_3: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6559:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6561:9: warning: Added loop label VITIS_LOOP_49_4:   [xilinx-label-all-loops]
        for (int j = 0; j < 64; j++) {
        ^~~
        VITIS_LOOP_49_4: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6561:9: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6571:5: warning: Added loop label VITIS_LOOP_59_5:   [xilinx-label-all-loops]
    for (int i = 0; i < 256; i++) {
    ^~~
    VITIS_LOOP_59_5: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6571:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6573:9: warning: Added loop label VITIS_LOOP_61_6:   [xilinx-label-all-loops]
        for (int b = 0; b < BLKS_N; b++) {
        ^~~
        VITIS_LOOP_61_6: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6573:9: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6578:2: warning: Added loop label VITIS_LOOP_66_7:   [xilinx-label-all-loops]
 for (int k = 0; k < UF_NORM; k++) {
 ^~~
 VITIS_LOOP_66_7: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6578:2: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6589:5: warning: Added loop label VITIS_LOOP_77_8:   [xilinx-label-all-loops]
    for (int b = 0; b < BLKS_N; b++) {
    ^~~
    VITIS_LOOP_77_8: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6589:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6591:2: warning: Added loop label VITIS_LOOP_79_9:   [xilinx-label-all-loops]
 for (int k = 0; k < UF_NORM; k++) {
 ^~~
 VITIS_LOOP_79_9: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6591:2: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6598:5: warning: Added loop label VITIS_LOOP_86_10:   [xilinx-label-all-loops]
    for (int i = 0; i < 256; i++) {
    ^~~
    VITIS_LOOP_86_10: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6598:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6599:9: warning: Added loop label VITIS_LOOP_87_11:   [xilinx-label-all-loops]
        for (int b = 0; b < BLKS_N; b++) {
        ^~~
        VITIS_LOOP_87_11: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6599:9: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6601:13: warning: Added loop label VITIS_LOOP_89_12:   [xilinx-label-all-loops]
            for (int k = 0; k < UF_NORM; k++) {
            ^~~
            VITIS_LOOP_89_12: 
/nethome/wsun377/ece8893/FPGA_ECE8893_1/2026_Spring/lab1_parallel/project_1/hls/.autopilot/db/top.pp.0.cpp:6601:13: note: FIX-IT applied suggested code changes
